[package]
name = "rocket-animation"
version = "0.1.1"
edition = "2018"

# プロジェクトの説明（任意）
description = "A simple CLI tool to display a rocket launch animation"
authors = ["Shota Isoda"]
license = "MIT"

exclude = [
    "/target",
    "*.lock",
    "*.json",
    "*.md",
    "*.yml",
    "*.toml",
    "/docker-compose.yml",
    "/Dockerfile",
    "/README.md"
]

# 実行ファイル名（デフォルトはプロジェクト名）
[[bin]]
name = "rocket"
path = "src/main.rs"

[dependencies]
# ターミナル操作用のクレート
crossterm = "0.27.0"
termion = "1.5"

# アニメーションのためにスリープを使用
tokio = { version = "1", features = ["full"] }


[package.metadata.deb]
name = "rocket-animation"


[package.metadata.rpm]
name = "rocket-animation"          # パッケージ名

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
rocket-animation = { path = "/usr/bin/rocket-animation" }
